Bug 505241 - Kate build plugin no longer restores last target
Summary: Kate build plugin no longer restores last target
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-05 16:06 UTC by qclab
Modified: 2025-06-10 00:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qclab 2025-06-05 16:06:14 UTC
SUMMARY
Kate formerly tracked current build target with configuration keys "Active Target Command" and "Active Target Index". These keys are no longer being written. Consequently, the last build target is not restored.

STEPS TO REPRODUCE
1. Activate Build plugin
2. Create target set
3. Build target
4. Close and reopen Kate

OBSERVED RESULT
No target is selected

EXPECTED RESULT
Last target is selected


SOFTWARE/OS VERSIONS
Windows: Windows 10 22H2
KDE Frameworks Version: 6.14.0
Qt Version: 6.8.3
Comment 1 Bug Janitor Service 2025-06-06 20:10:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1788
Comment 2 Kåre Särs 2025-06-06 20:17:05 UTC
Git commit c9b7840bd6468e4f0f40776ddbeb61ae98ac8e25 by Kåre Särs.
Committed on 06/06/2025 at 20:04.
Pushed by sars into branch 'master'.

Fix saving & restoring last active build target index

M  +19   -15   addons/katebuild-plugin/plugin_katebuild.cpp

https://invent.kde.org/utilities/kate/-/commit/c9b7840bd6468e4f0f40776ddbeb61ae98ac8e25
Comment 3 Kåre Särs 2025-06-06 20:20:26 UTC
Thanks for the report!

I've had a feeling something was wrong with the target selection on startup, but it had not disturbed me enough to check.
Comment 4 Kåre Särs 2025-06-10 00:39:31 UTC
Git commit df80c487b836c20c921e39552ab8ccefbfb6e6fe by Kåre Särs.
Committed on 10/06/2025 at 00:38.
Pushed by sars into branch 'release/25.04'.

Fix saving & restoring last active build target index

M  +19   -15   addons/katebuild-plugin/plugin_katebuild.cpp

https://invent.kde.org/utilities/kate/-/commit/df80c487b836c20c921e39552ab8ccefbfb6e6fe