Fix saving & restoring last active build target index

BUG: 505241